pipelinefiles/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: marketplace-core-service
  name: marketplace-core-service
  namespace: marketplace-core-service
spec:
  replicas: 1
  selector:

    app: marketplace-core-service
    deploymentconfig: marketplace-core-service
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
    type: Recreate
  template:
    metadata:
      labels:
        app: marketplace-core-service
        deploymentconfig: marketplace-core-service
    spec:
      containers:
        - image: docker-registry.default.svc:5000/marketplace-core-service/marketplace-core-service
          imagePullPolicy: Always
          name: marketplace-core-service
          ports:
            - containerPort: 8080
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - marketplace-core-service
        from:
          kind: ImageStreamTag
          name: 'marketplace-core-service:latest'
          namespace: marketplace-core-service
      type: ImageChange
