pipelinefiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elogistic-core-service
  name: elogistic-core-service
  namespace: elogistic-core-service
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: elogistic-core-service
  type: ClusterIP
