pipelinefiles/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: marketplace-core-service
  name: marketplace-core-service
  namespace: marketplace-core-service
spec:
  host: marketplace-core-service.nagadpay.com 
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: marketplace-core-service
    weight: 100
  wildcardPolicy: None
